@@ -7,6 +7,8 @@ import static org.example.user.domain.entity.member.QUserEntity.*;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
@@ -16,7 +18,7 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import org.example.post.domain.dto.PostDto;
-import org.example.post.domain.entity.HashtagEntity;
+import org.example.post.domain.dto.PostStatsDto;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
@@ -25,6 +27,7 @@ import org.springframework.data.domain.Sort;
 import com.querydsl.core.BooleanBuilder;
 import com.querydsl.core.Tuple;
 import com.querydsl.core.types.Predicate;
+import com.querydsl.core.types.Projections;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 
 import jakarta.persistence.EntityManager;
@@ -66,6 +69,7 @@ public class PostRepositoryImpl implements PostRepositoryCustom {
 				hashtagEntity.hashtagContent,
 				postEntity.imageId,
 				postEntity.likeCount,
+				postEntity.hits,
 				postEntity.createdAt
 			).distinct()
 			.from(postEntity)
@@ -84,9 +88,10 @@ public class PostRepositoryImpl implements PostRepositoryCustom {
 			String hashtagContent = tuple.get(hashtagEntity.hashtagContent);
 			LocalDateTime createdAt = tuple.get(postEntity.createdAt);
 			int likeCount = Optional.ofNullable(tuple.get(postEntity.likeCount)).orElse(0);
+			int hits = Optional.ofNullable(tuple.get(postEntity.hits)).orElse(0);
 
 			PostDto.PostDtoResponse dto = postDtoMap.computeIfAbsent(postId, id ->
-				new PostDto.PostDtoResponse(nickname, id, imageId, new ArrayList<>(), likeCount, createdAt)
+				new PostDto.PostDtoResponse(nickname, id, imageId, new ArrayList<>(), likeCount, hits, createdAt)
 			);
 
 			if (hashtagContent != null && !dto.hashtags().contains(hashtagContent)) {
@@ -103,6 +108,27 @@ public class PostRepositoryImpl implements PostRepositoryCustom {
 			sortedPosts = sortPosts(sort, content, pageable);
 		}
 		return new PageImpl<>(sortedPosts, pageable, total);
+	}
+
+	@Override
+	public int updateView(Long postId) {
+		return Math.toIntExact(queryFactory
+			.update(postEntity)
+			.set(postEntity.hits, postEntity.hits.add(1))
+			.where(postEntity.postId.eq(postId))
+			.execute());
+	}
+
+	@Override
+	public List<PostStatsDto> findPostStatsByType() {
+		return queryFactory
+			.select(Projections.constructor(PostStatsDto.class,
+				postEntity.postStatus,
+				postEntity.hits.sum(),
+				postEntity.likeCount.sum()))
+			.from(postEntity)
+			.groupBy(postEntity.postStatus)
+			.fetch();
 	}
 
 	private Predicate postContentContains(String postContent) {
@@ -131,18 +157,22 @@ public class PostRepositoryImpl implements PostRepositoryCustom {
 
 	private List<String> splitString(String str, String delimiter) {
 		if (isEmpty(str)) {
-			return List.of();
+			return Collections.emptyList();
 		}
-		return List.of(str.split(delimiter));
+		return Arrays.stream(str.split(delimiter))
+			.filter(s -> !s.isEmpty())
+			.collect(Collectors.toList());
 	}
 
-	private List<PostDto.PostDtoResponse> sortPosts(Sort sort, List<PostDto.PostDtoResponse> content, Pageable pageable) {
+
+	private List<PostDto.PostDtoResponse> sortPosts(Sort sort, List<PostDto.PostDtoResponse> content,
+		Pageable pageable) {
 		final Map<String, Function<PostDto.PostDtoResponse, Comparable>> COMPARATORS = new HashMap<>();
 		COMPARATORS.put("createdAt", PostDto.PostDtoResponse::createdAt);
 
 		Comparator<PostDto.PostDtoResponse> comparator = null;
 
-		for (Sort.Order order : sort) {	// TODO: sort 조건 추가 입력 가능 1. createdAt, 2. ?
+		for (Sort.Order order : sort) {    // TODO: sort 조건 추가 입력 가능 1. createdAt, 2. ?
 			Comparator<PostDto.PostDtoResponse> newComparator;
 
 			newComparator = Comparator.comparing(COMPARATORS.get(order.getProperty()));
@@ -157,7 +187,6 @@ public class PostRepositoryImpl implements PostRepositoryCustom {
 		if (comparator != null) {
 			content.sort(comparator);
 		}
-
 
 		return content.stream()
 			.skip(pageable.getOffset())
